gcc/testsuite/rust/rustc/ui/rfc-1937-termination-trait/termination-trait-in-test-should-panic.rs
// compile-flags: --test

#![feature(test)]

extern crate test;
use std::num::ParseIntError;
use test::Bencher;

#[test]
#[should_panic]
fn not_a_num() -> Result<(), ParseIntError> {
// { dg-error "" "" { target *-*-* } .-1 }
    let _: u32 = "abc".parse()?;
    Ok(())
}

